--- a/desarrollo.ipynb
+++ b/desarrollo.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "8fcb9eda",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "d3cfcc91",
    "metadata": {},
    "outputs": [
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "10f7dcf2",
    "metadata": {},
    "outputs": [
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "5d0ce2c2",
    "metadata": {},
    "outputs": [
@@ -1067,6 +1067,226 @@
     "    plt.ylabel(\"Proporción\")\n",
     "    plt.show()\n",
     "    display(Markdown(f\"**Interpretación:** Si las proporciones varían entre categorías, {col} aporta información discriminativa.\"))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97bcf21b",
+   "metadata": {},
+   "source": [
+    "# PUNTO 3 — PROCESAMIENTO DE DATOS\n",
+    "\n",
+    "Objetivos:\n",
+    "- Manejar valores nulos en variables numéricas y categóricas.\n",
+    "- Codificar variables categóricas para uso en modelos.\n",
+    "- Normalizar o estandarizar variables numéricas.\n",
+    "- Implementar un pipeline de preprocesamiento con scikit-learn.\n",
+    "- Dividir los datos en conjuntos de entrenamiento, validación y prueba.\n",
+    "\n",
+    "Cada bloque presenta el código de implementación seguido de una breve explicación.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09a7b2a1",
+   "metadata": {},
+   "source": [
+    "### Manejo de valores nulos\n",
+    "\n",
+    "En datos reales es común encontrar valores faltantes. Se pueden imputar usando la mediana (numéricos) o la moda (categóricos)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c9493bfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "# Imputador para variables numéricas\n",
+    "imputer_num = SimpleImputer(strategy=\"median\")\n",
+    "\n",
+    "# Imputador para variables categóricas\n",
+    "imputer_cat = SimpleImputer(strategy=\"most_frequent\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e35bedf",
+   "metadata": {},
+   "source": [
+    "### Codificación de variables categóricas\n",
+    "\n",
+    "Los algoritmos necesitan valores numéricos. Usamos OneHotEncoder, que convierte cada categoría en columnas binarias."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "01750b8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "# Codificador OneHot para variables categóricas\n",
+    "encoder = OneHotEncoder(handle_unknown=\"ignore\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8606e8e",
+   "metadata": {},
+   "source": [
+    "### Normalización/Estandarización\n",
+    "\n",
+    "La estandarización transforma las variables numéricas para que tengan media 0 y desviación estándar 1, lo cual mejora el rendimiento de algoritmos sensibles a magnitudes como kNN o redes neuronales."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8e8780dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Escalador estándar para variables numéricas\n",
+    "scaler = StandardScaler()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "270f97f0",
+   "metadata": {},
+   "source": [
+    "### Pipeline de preprocesamiento\n",
+    "\n",
+    "Agrupamos las transformaciones en un ColumnTransformer para que se apliquen automáticamente según el tipo de variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b681bffa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "# 1. Separar variables predictoras y target\n",
+    "X = df.drop(columns=[\"Diagnosis\"])  \n",
+    "y = df[\"Diagnosis\"]\n",
+    "\n",
+    "# 2. Identificar columnas numéricas y categóricas\n",
+    "num_cols = X.select_dtypes(include=[\"int64\", \"float64\"]).columns\n",
+    "cat_cols = X.select_dtypes(include=[\"object\", \"category\"]).columns\n",
+    "\n",
+    "# 3. Definir transformaciones para cada tipo\n",
+    "numeric_transformer = Pipeline(steps=[\n",
+    "    (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
+    "    (\"scaler\", StandardScaler())\n",
+    "])\n",
+    "\n",
+    "categorical_transformer = Pipeline(steps=[\n",
+    "    (\"imputer\", SimpleImputer(strategy=\"most_frequent\")),\n",
+    "    (\"encoder\", OneHotEncoder(handle_unknown=\"ignore\"))\n",
+    "])\n",
+    "\n",
+    "# 4. Pipeline completo\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        (\"num\", numeric_transformer, num_cols),\n",
+    "        (\"cat\", categorical_transformer, cat_cols)\n",
+    "    ]\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65df1ccc",
+   "metadata": {},
+   "source": [
+    "### División del dataset\n",
+    "\n",
+    "Dividimos los datos en train (70%), validación (15%) y test (15%), manteniendo la proporción de clases (estratificación)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "62204e40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: (1504, 34)\n",
+      "Val: (322, 34)\n",
+      "Test: (323, 34)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Separar variables y target\n",
+    "X = df.drop(columns=[\"Diagnosis\"])  \n",
+    "y = df[\"Diagnosis\"]\n",
+    "\n",
+    "# Train (70%) y temporal (30%)\n",
+    "X_train, X_temp, y_train, y_temp = train_test_split(\n",
+    "    X, y, test_size=0.30, stratify=y, random_state=42\n",
+    ")\n",
+    "\n",
+    "# De X_temp sacar validación (15%) y test (15%)\n",
+    "X_val, X_test, y_val, y_test = train_test_split(\n",
+    "    X_temp, y_temp, test_size=0.50, stratify=y_temp, random_state=42\n",
+    ")\n",
+    "\n",
+    "print(\"Train:\", X_train.shape)\n",
+    "print(\"Val:\", X_val.shape)\n",
+    "print(\"Test:\", X_test.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81e98525",
+   "metadata": {},
+   "source": [
+    "### Aplicación del preprocesamiento\n",
+    "\n",
+    "Finalmente, aplicamos el preprocesador a cada subconjunto de datos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c1aeec4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape procesado: (1504, 34)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ajustar con el train y transformar los tres conjuntos\n",
+    "X_train_processed = preprocessor.fit_transform(X_train)\n",
+    "X_val_processed = preprocessor.transform(X_val)\n",
+    "X_test_processed = preprocessor.transform(X_test)\n",
+    "\n",
+    "print(\"Shape procesado:\", X_train_processed.shape)\n"
    ]
   }
  ],
