Avances en el punto 4

--- a/desarrollo.ipynb
+++ b/desarrollo.ipynb
@@ -1288,6 +1288,206 @@
     "\n",
     "print(\"Shape procesado:\", X_train_processed.shape)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6893894",
+   "metadata": {},
+   "source": [
+    "# PUNTO 4 — ENTRENAMIENTO DE MODELOS\n",
+    "\n",
+    "Objetivos:\n",
+    "\n",
+    "Entrenar y evaluar 3 modelos distintos (kNN, Random Forest, DNN).\n",
+    "\n",
+    "Comparar su desempeño en train, val y test.\n",
+    "\n",
+    "Analizar posibles casos de overfitting y underfitting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e216a3c",
+   "metadata": {},
+   "source": [
+    "### Modelo 1: k-Nearest Neighbors (kNN)\n",
+    "\n",
+    "kNN clasifica un ejemplo nuevo según la mayoría de sus k vecinos más cercanos. Es sensible a la escala de las variables (por eso normalizamos antes)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6402e7b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kNN -> Train: 0.831781914893617 Val: 0.7422360248447205 Test: 0.7368421052631579\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Definir modelo kNN\n",
+    "knn = KNeighborsClassifier(n_neighbors=5)\n",
+    "\n",
+    "# Entrenar\n",
+    "knn.fit(X_train_processed, y_train)\n",
+    "\n",
+    "# Evaluación\n",
+    "acc_knn_train = accuracy_score(y_train, knn.predict(X_train_processed))\n",
+    "acc_knn_val   = accuracy_score(y_val, knn.predict(X_val_processed))\n",
+    "acc_knn_test  = accuracy_score(y_test, knn.predict(X_test_processed))\n",
+    "\n",
+    "print(\"kNN -> Train:\", acc_knn_train, \"Val:\", acc_knn_val, \"Test:\", acc_knn_test)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edcf1304",
+   "metadata": {},
+   "source": [
+    "### Modelo 2: Random Forest\n",
+    "\n",
+    "Random Forest es un método de ensamble basado en muchos árboles de decisión. Reduce el riesgo de overfitting comparado con un solo árbol."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "10d8f526",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest -> Train: 1.0 Val: 0.9347826086956522 Test: 0.9535603715170279\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# Definir modelo Random Forest\n",
+    "rf = RandomForestClassifier(\n",
+    "    n_estimators=200,   # número de árboles\n",
+    "    max_depth=None,     # profundidad libre\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# Entrenar\n",
+    "rf.fit(X_train_processed, y_train)\n",
+    "\n",
+    "# Evaluación\n",
+    "acc_rf_train = accuracy_score(y_train, rf.predict(X_train_processed))\n",
+    "acc_rf_val   = accuracy_score(y_val, rf.predict(X_val_processed))\n",
+    "acc_rf_test  = accuracy_score(y_test, rf.predict(X_test_processed))\n",
+    "\n",
+    "print(\"Random Forest -> Train:\", acc_rf_train, \"Val:\", acc_rf_val, \"Test:\", acc_rf_test)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6892181",
+   "metadata": {},
+   "source": [
+    "### Modelo 3: Deep Neural Network (DNN)\n",
+    "\n",
+    "Red neuronal profunda con al menos 3 capas ocultas, activación ReLU, regularización con Dropout, y salida con sigmoide (porque es clasificación binaria)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "36fa7b2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DNN -> Train: 0.9793882966041565 Val: 0.850931704044342 Test: 0.826625406742096\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import layers, models\n",
+    "\n",
+    "# Definir arquitectura de la red\n",
+    "dnn = models.Sequential([\n",
+    "    layers.Input(shape=(X_train_processed.shape[1],)),\n",
+    "    layers.Dense(128, activation=\"relu\"),\n",
+    "    layers.Dropout(0.3),\n",
+    "    layers.Dense(64, activation=\"relu\"),\n",
+    "    layers.Dropout(0.3),\n",
+    "    layers.Dense(32, activation=\"relu\"),\n",
+    "    layers.Dense(1, activation=\"sigmoid\")  # salida binaria\n",
+    "])\n",
+    "\n",
+    "# Compilar modelo\n",
+    "dnn.compile(optimizer=\"adam\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
+    "\n",
+    "# Entrenar (usando validación)\n",
+    "history = dnn.fit(\n",
+    "    X_train_processed, y_train,\n",
+    "    validation_data=(X_val_processed, y_val),\n",
+    "    epochs=30, batch_size=32, verbose=0\n",
+    ")\n",
+    "\n",
+    "# Evaluación\n",
+    "acc_dnn_train = dnn.evaluate(X_train_processed, y_train, verbose=0)[1]\n",
+    "acc_dnn_val   = dnn.evaluate(X_val_processed, y_val, verbose=0)[1]\n",
+    "acc_dnn_test  = dnn.evaluate(X_test_processed, y_test, verbose=0)[1]\n",
+    "\n",
+    "print(\"DNN -> Train:\", acc_dnn_train, \"Val:\", acc_dnn_val, \"Test:\", acc_dnn_test)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0884e56d",
+   "metadata": {},
+   "source": [
+    "### Tabla comparativa de desempeño\n",
+    "\n",
+    "Organizamos los resultados en una tabla clara."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "efc5fe72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Modelo     Train       Val      Test\n",
+      "0            kNN  0.831782  0.742236  0.736842\n",
+      "1  Random Forest  1.000000  0.934783  0.953560\n",
+      "2            DNN  0.979388  0.850932  0.826625\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "results = pd.DataFrame({\n",
+    "    \"Modelo\": [\"kNN\", \"Random Forest\", \"DNN\"],\n",
+    "    \"Train\": [acc_knn_train, acc_rf_train, acc_dnn_train],\n",
+    "    \"Val\": [acc_knn_val, acc_rf_val, acc_dnn_val],\n",
+    "    \"Test\": [acc_knn_test, acc_rf_test, acc_dnn_test]\n",
+    "})\n",
+    "\n",
+    "print(results)\n"
+   ]
   }
  ],
  "metadata": {
