--- a/desarrollo.ipynb
+++ b/desarrollo.ipynb
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "b681bffa",
    "metadata": {},
    "outputs": [],
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "62204e40",
    "metadata": {},
    "outputs": [
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "c1aeec4d",
    "metadata": {},
    "outputs": [
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "6402e7b6",
    "metadata": {},
    "outputs": [
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "10d8f526",
    "metadata": {},
    "outputs": [
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "36fa7b2d",
    "metadata": {},
    "outputs": [
@@ -1412,7 +1412,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DNN -> Train: 0.9793882966041565 Val: 0.850931704044342 Test: 0.826625406742096\n"
+      "DNN -> Train: 0.980053186416626 Val: 0.8602484464645386 Test: 0.826625406742096\n"
      ]
     }
    ],
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "efc5fe72",
    "metadata": {},
    "outputs": [
@@ -1472,7 +1472,7 @@
       "          Modelo     Train       Val      Test\n",
       "0            kNN  0.831782  0.742236  0.736842\n",
       "1  Random Forest  1.000000  0.934783  0.953560\n",
-      "2            DNN  0.979388  0.850932  0.826625\n"
+      "2            DNN  0.980053  0.860248  0.826625\n"
      ]
     }
    ],
@@ -1488,11 +1488,167 @@
     "\n",
     "print(results)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e056f0b0",
+   "metadata": {},
+   "source": [
+    "# PUNTO 5  — PRUEBA CON MUESTRA ARTIFICIAL\n",
+    "Genere una muestra artificial (nueva) con características inventadas, ingrésela al modelo seleccionado y analice la predicción.\n",
+    "\n",
+    "Utilaremos SMOTE, que es una técnica de sobremuestreo que genera muestras sintéticas a partir de clases minoritarias. Se utiliza para obtener un conjunto de entrenamiento sintéticamente equilibrado o casi equilibrado."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "aa082ce0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antes SMOTE: (1504, 34) Diagnosis\n",
+      "0    972\n",
+      "1    532\n",
+      "Name: count, dtype: int64\n",
+      "Después SMOTE: (1944, 34) Diagnosis\n",
+      "0    972\n",
+      "1    972\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "\n",
+    "# Instanciamos SMOTE\n",
+    "smote = SMOTE(random_state=42)\n",
+    "\n",
+    "# Aplicamos SMOTE SOLO al train\n",
+    "X_train_resampled, y_train_resampled = smote.fit_resample(X_train_processed, y_train)\n",
+    "\n",
+    "print(\"Antes SMOTE:\", X_train_processed.shape, y_train.value_counts())\n",
+    "print(\"Después SMOTE:\", X_train_resampled.shape, y_train_resampled.value_counts())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7b8daa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest -> Train: 1.0 Val: 0.9347826086956522 Test: 0.9535603715170279 Train_resmapled: 0.9835390946502057\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluación\n",
+    "acc_rf_train = accuracy_score(y_train, rf.predict(X_train_processed))\n",
+    "acc_rf_val   = accuracy_score(y_val, rf.predict(X_val_processed))\n",
+    "acc_rf_test  = accuracy_score(y_test, rf.predict(X_test_processed))\n",
+    "acc_rf_resampled = accuracy_score(y_train_resampled, rf.predict(X_train_resampled))\n",
+    "\n",
+    "print(\"Random Forest -> Train:\", acc_rf_train, \"Val:\", acc_rf_val, \"Test:\", acc_rf_test, \"Train_resamapled:\", acc_rf_resampled)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2405449",
+   "metadata": {},
+   "source": [
+    "Los resultados con la muestra artificial train_resampled nos generó un puntaje menor que el puntaje obtenido con el mismo sub dataset train, pero nos dio mejor puntaje que los obtenidos con val y test. Esto se explica porque gran parte de la muestra artificial train_resampled abarca datos que fueron entranados con el modelo, sin embargo dio menor por las muestras artificiales obtenidas con SMOTE. Incluso así, es un resultado satisfactorio ya que estuvo mejor que val y test."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "267ebbbd",
+   "metadata": {},
+   "source": [
+    "# 6 PUNTO — INVESTIGUE Y EXPLIQUE LAS SIGUIENTES ESTRATEGIAS\n",
+    "- K-Fold Cross Validation\n",
+    "- Leave-One-Out Cross Validation (LOOCV)\n",
+    "\n",
+    "¿Son aplicables estas estrategias al dataset elegido?\n",
+    "\n",
+    "Sí, ambas estrategias son aplicables al conjunto de datos elegido (el cual contiene 2149 entradas),pero la K-Fold cross validation (con k=5 o k=10) sería una opción más llamativa para este caso. Aunque es posible aplicar LOOCV, sería costoso computacionalmente porque para hacerlo tendríamos que entrenar el modelo 2149 veces, y esto no es eficiente para un conjunto de datos de este tamaño.\n",
+    "\n",
+    "¿Qué beneficios tendrían frente al esquema de validación tradicional (train/val/test)?\n",
+    "\n",
+    "- Evaluación robusta: Con una sola divisón se tendremos resultados muy dependientes de la suerte del muestreo, a cambio la validación cruzada utiliza todos los puntos de datos tanto para el entrenamiento como para la validación. Esto proporciona una estimación más estable y fiable de cómo el modelo se comportará frente a datos nuevos.\n",
+    "- Uso eficiente de datos: La validación cruzada asegura que se utilicen todos los datos disponibles para la evaluación del modelo. Con una sola división el conjunto de prueba se usa una sola vez lo cual puede ser un problema si el conjunto de datos es pequeño. Al entrenar en k-1 pliegues el modelo se expone a una mayor cantidad de datos durante la fase de aprendizaje.\n",
+    "- Reducción de la varianza: Al promediar los resultados en varias iteraciones la validación cruzada ayuda a reducir la varianza de la estimación de rendimiento, lo que da una mejor idea de cómo el modelo se comportará en diferentes subconjuntos de datos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "08f543ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2149 entries, 0 to 2148\n",
+      "Data columns (total 35 columns):\n",
+      " #   Column                     Non-Null Count  Dtype  \n",
+      "---  ------                     --------------  -----  \n",
+      " 0   PatientID                  2149 non-null   int64  \n",
+      " 1   Age                        2149 non-null   int64  \n",
+      " 2   Gender                     2149 non-null   int64  \n",
+      " 3   Ethnicity                  2149 non-null   int64  \n",
+      " 4   EducationLevel             2149 non-null   int64  \n",
+      " 5   BMI                        2149 non-null   float64\n",
+      " 6   Smoking                    2149 non-null   int64  \n",
+      " 7   AlcoholConsumption         2149 non-null   float64\n",
+      " 8   PhysicalActivity           2149 non-null   float64\n",
+      " 9   DietQuality                2149 non-null   float64\n",
+      " 10  SleepQuality               2149 non-null   float64\n",
+      " 11  FamilyHistoryAlzheimers    2149 non-null   int64  \n",
+      " 12  CardiovascularDisease      2149 non-null   int64  \n",
+      " 13  Diabetes                   2149 non-null   int64  \n",
+      " 14  Depression                 2149 non-null   int64  \n",
+      " 15  HeadInjury                 2149 non-null   int64  \n",
+      " 16  Hypertension               2149 non-null   int64  \n",
+      " 17  SystolicBP                 2149 non-null   int64  \n",
+      " 18  DiastolicBP                2149 non-null   int64  \n",
+      " 19  CholesterolTotal           2149 non-null   float64\n",
+      " 20  CholesterolLDL             2149 non-null   float64\n",
+      " 21  CholesterolHDL             2149 non-null   float64\n",
+      " 22  CholesterolTriglycerides   2149 non-null   float64\n",
+      " 23  MMSE                       2149 non-null   float64\n",
+      " 24  FunctionalAssessment       2149 non-null   float64\n",
+      " 25  MemoryComplaints           2149 non-null   int64  \n",
+      " 26  BehavioralProblems         2149 non-null   int64  \n",
+      " 27  ADL                        2149 non-null   float64\n",
+      " 28  Confusion                  2149 non-null   int64  \n",
+      " 29  Disorientation             2149 non-null   int64  \n",
+      " 30  PersonalityChanges         2149 non-null   int64  \n",
+      " 31  DifficultyCompletingTasks  2149 non-null   int64  \n",
+      " 32  Forgetfulness              2149 non-null   int64  \n",
+      " 33  Diagnosis                  2149 non-null   int64  \n",
+      " 34  DoctorInCharge             2149 non-null   object \n",
+      "dtypes: float64(12), int64(22), object(1)\n",
+      "memory usage: 587.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1506,7 +1662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
