Cambio de descripciones y en el código de los puntos 5 y 6

--- a/desarrollo.ipynb
+++ b/desarrollo.ipynb
@@ -1497,7 +1497,8 @@
     "# PUNTO 5  — PRUEBA CON MUESTRA ARTIFICIAL\n",
     "Genere una muestra artificial (nueva) con características inventadas, ingrésela al modelo seleccionado y analice la predicción.\n",
     "\n",
-    "Utilaremos SMOTE, que es una técnica de sobremuestreo que genera muestras sintéticas a partir de clases minoritarias. Se utiliza para obtener un conjunto de entrenamiento sintéticamente equilibrado o casi equilibrado."
+    "Utilaremos SMOTE, que es una técnica de sobremuestreo que genera muestras sintéticas a partir de clases minoritarias. Se utiliza para obtener un conjunto de entrenamiento sintéticamente equilibrado o casi equilibrado.\n",
+    "\n"
    ]
   },
   {
@@ -1535,6 +1536,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "903ebcc5",
+   "metadata": {},
+   "source": [
+    "Ahora lo evaluamos con el modelo Random Forest"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d7b8daa4",
@@ -1550,9 +1559,6 @@
    ],
    "source": [
     "# Evaluación\n",
-    "acc_rf_train = accuracy_score(y_train, rf.predict(X_train_processed))\n",
-    "acc_rf_val   = accuracy_score(y_val, rf.predict(X_val_processed))\n",
-    "acc_rf_test  = accuracy_score(y_test, rf.predict(X_test_processed))\n",
     "acc_rf_resampled = accuracy_score(y_train_resampled, rf.predict(X_train_resampled))\n",
     "\n",
     "print(\"Random Forest -> Train:\", acc_rf_train, \"Val:\", acc_rf_val, \"Test:\", acc_rf_test, \"Train_resamapled:\", acc_rf_resampled)"
@@ -1571,9 +1577,13 @@
    "id": "267ebbbd",
    "metadata": {},
    "source": [
-    "# 6 PUNTO — INVESTIGUE Y EXPLIQUE LAS SIGUIENTES ESTRATEGIAS\n",
-    "- K-Fold Cross Validation\n",
-    "- Leave-One-Out Cross Validation (LOOCV)\n",
+    "# PUNTO 6 — INVESTIGUE Y EXPLIQUE LAS SIGUIENTES ESTRATEGIAS\n",
+    "- K-Fold Cross Validation: \n",
+    "La Validación Cruzada K-Fold es un procedimiento que evalúa modelos de machine learning en un conjunto de datos limitado. El conjunto se divide en k pliegues o \"folds\" de igual tamaño. El modelo se entrena en k-1 pliegues y se valida en el pliegue restante. Este proceso se repite k veces, usando un pliegue diferente para la validación en cada iteración. La puntuación de rendimiento final es el promedio de las k puntuaciones de validación.\n",
+    "\n",
+    "- Leave-One-Out Cross Validation (LOOCV): \n",
+    "Leave-One-Out Cross-Validation (LOOCV) es un caso especial de K-Fold donde el número de pliegues k es igual al número de puntos de datos n en el conjunto. Para cada iteración, se utiliza un único punto de dato como conjunto de validación, mientras que los n-1 puntos restantes se usan para el entrenamiento. Este proceso se repite n veces, y la puntuación final es el promedio de las n puntuaciones individuales.\n",
+    "\n",
     "\n",
     "¿Son aplicables estas estrategias al dataset elegido?\n",
     "\n",
