Terminado todo lo faltante

--- a/desarrollo.ipynb
+++ b/desarrollo.ipynb
@@ -938,6 +938,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "211c29b5",
+   "metadata": {},
+   "source": [
+    "Se evidencia que los síntomas cognitivos y conductuales como quejas de memoria, problemas de comportamiento, desorientación y dificultad para completar tareas tienen una mayor asociación con diagnósticos positivos. En contraste, factores médicos como diabetes, hipertensión o tabaquismo no muestran diferencias claras entre grupos. Asimismo, variables demográficas como género, etnia o nivel educativo parecen tener menor influencia en el diagnóstico. En general, los síntomas relacionados con deterioro cognitivo resultan más determinantes que las condiciones de salud general o factores sociodemográficos.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3ea057a8",
    "metadata": {},
    "source": [
@@ -1031,6 +1040,14 @@
     "    plt.title(f\"Proporción de {TARGET}=1 por categoría en {col}\")\n",
     "    plt.ylabel(\"Proporción\")\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3a60a03",
+   "metadata": {},
+   "source": [
+    "Se evidencia que los pacientes con diagnóstico positivo tienden a tener valores más bajos en las evaluaciones funcionales (FunctionalAssessment y ADL), lo que refleja una disminución en la autonomía. Asimismo, en el test cognitivo MMSE se observa que quienes presentan el diagnóstico muestran puntajes significativamente menores, indicando un deterioro cognitivo asociado a la condición. También se puede ver una ligera correlación entre el nivel de educación y la proporción de diagnosis de la enfermedad, siendo que entre menor nivel de educación, mayor será la posibilidad de ser diagnosticado.\n"
    ]
   },
   {
